# sodium

./: .gitignore  CMakeLists.txt  README.md  overview.txt
apps/client/: CMakeLists.txt  client-main.cpp  client.cpp  main.cpp
apps/server/: CMakeLists.txt  server-main.cpp
include/net/: client.hpp  server.hpp  socket.hpp
include/protocol/: message.hpp
src/: CMakeLists.txt
src/net/: server.cpp  socket.cpp
src/protocol/: message.cpp
